# aws-security-posture-agent

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
docs/: IMPROVEMENTS-TODO.md  METRICS-COMPARISON.md  PROGRESS-LOG.md
docs/submissions/: submission-1-clear-the-lineup.md  submission-2-smash-stories.md
src/security_posture/: crew.py  main.py  monitoring.py
src/security_posture/config/: agents.yaml  tasks.yaml
src/security_posture/tools/: __init__.py  aws_resource_scanner.py  ec2_security_checker.py  iam_analyzer.py  lambda_security_checker.py  s3_config_checker.py  security_group_analyzer.py
