[project]
name = "security-posture-agent"
version = "1.0.0"
description = "Multi-agent AWS security posture scanner with AI observability"
authors = [{ name = "Sarvar Nadaf", email = "sarvar@sarvarnadaf.com" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai[bedrock,tools]>=1.14.0",
    "sentry-sdk>=2.65.0",
    "streamlit>=1.57.0",
    "boto3>=1.35.0",
    "pydantic>=2.0",
]

[project.scripts]
security_scan = "security_posture.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/security_posture"]

[tool.crewai]
type = "crew"
